# erectus

./: .gitignore  CMakeLists.txt  README.md  build-shim.sh  errno-table.csv  generate-errno-lut.py  generate-shim-data.sh  main.cpp  main.py  patching.hpp  shims.c  vcpkg.json
.github/workflows/: ci.yml
assets/: errno_conversion_code.hpp  generate-errno-lut.py
